--- a/app/src/main/res/layout/activity_drug.xml
+++ b/app/src/main/res/layout/activity_drug.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.leeph.smartlaps.DrugActivity">
+    tools:context="com.example.leeph.smartlaps.Drug.DrugActivity">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
