--- a/app/src/main/res/layout/activity_drug_detail.xml
+++ b/app/src/main/res/layout/activity_drug_detail.xml
@@ -18,7 +18,8 @@
             <ImageView
                 android:id="@+id/imageTitle"
                 android:layout_width="wrap_content"
-                android:layout_height="250dp"/>
+                android:layout_height="250dp"
+                android:src="@drawable/img_toluene"/>
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btnWarn"
                 android:layout_width="250dp"
