--- a/app/src/main/res/layout/activity_drug_detail.xml
+++ b/app/src/main/res/layout/activity_drug_detail.xml
@@ -13,6 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
+            style="@style/ElevationLayout"
             android:orientation="vertical">
 
             <ImageView
@@ -21,6 +22,7 @@
                 android:layout_height="250dp"
                 android:src="@drawable/img_toluene"/>
             <android.support.v7.widget.AppCompatButton
+                android:theme="@style/Widget.Button.Primary"
                 android:id="@+id/btnWarn"
                 android:layout_width="250dp"
                 android:layout_height="50dp"
