경고표시 디자인 적용

--- a/app/src/main/res/layout/activity_drug_detail.xml
+++ b/app/src/main/res/layout/activity_drug_detail.xml
@@ -5,34 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Drug.DrugDetailActivity">
+
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
+
         <android.support.v7.widget.LinearLayoutCompat
+            style="@style/ElevationLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            style="@style/ElevationLayout"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <ImageView
                 android:id="@+id/imageTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:src="@drawable/img_toluene"/>
+                android:src="@drawable/img_toluene" />
+
             <android.support.v7.widget.AppCompatButton
-                android:theme="@style/Widget.Button.Primary"
                 android:id="@+id/btnWarn"
                 android:layout_width="250dp"
                 android:layout_height="50dp"
+                android:layout_margin="10dp"
                 android:text="@string/strWarn"
-                android:layout_margin="10dp"/>
+                android:theme="@style/Widget.Button.Primary" />
+
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/txtDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="설명"/>
+                android:text="설명" />
 
         </android.support.v7.widget.LinearLayoutCompat>
     </android.support.v4.widget.NestedScrollView>
